samples/_failures_safe/1761313374_517c32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51561673.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_51561673.c:146:15: error: expected ‘)’ at end of input
  146 |     if (n == 2
      |        ~      ^
      |               )
./samples/SAFE/__tmp_51561673.c:146:5: error: expected declaration or statement at end of input
  146 |     if (n == 2
      |     ^~
